# webviz-subsurface

./: .gitignore  .gitignore~  .pylintrc  .travis.yml  CHANGELOG.md  HUV.yaml  HUV_complex.yaml  HUV_mac.yaml  HUV_mac_complex.yaml  INTRODUCTION.md  README.md  SECURITY.md  _summary.py  argument_deprecations.md  bandit.yml  deploy_docker_image.sh  deprecations.md  df  docker_deploy_image.sh  docsify-tabs.min.js  drogon_logs.json  drogon_wells.json  dummyplugin.yaml  dummyplugin_mac.yaml  index.html  mapviewer.wsd  mintest.txt  mypy.ini  plugin_deprecations.md  pyproject.toml  q  requirements.txt  setup.py  sidebar.md  summary_data.csv  thisisatest.txt  webviz-config.md  webviz-doc.css  webviz-doc.js  webviz-subsurface-testdata  (+3 more)
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql.yml  deploy.yml  subsurface.yml  webviz-subsurface.yml
.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  pathlib.data.json  pathlib.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  uuid.data.json  uuid.meta.json  zipimport.data.json  zipimport.meta.json
ProductionNetworkPortable/: .dockerignore  .gitignore  Dockerfile  README.md  requirements.txt  theme_settings.json  webviz_app.py
assets/: webviz_doc.css
examples/: basic_example.yaml  full_example.yaml  intersect_grid.yaml  reek_example.yaml  single_container.yaml  surfaces.yaml  troll_example.yaml  view3d_example.yaml
examples/data/: morris.csv  parameters.csv  realdata.csv  smry.csv  subsurface-map.json  volumes.csv
parquet_datafiles/: parameters100realizations.parquet  parameters10realizations.parquet  response_grid_volumes_100realizations.parquet  response_grid_volumes_10realizations.parquet  response_timeseries_10realizations.parquet
porto/: .dockerignore  Dockerfile  README.md  copy_data.py  server.crt  server.key  webviz_app.py
porto/assets/: default_theme.css  webviz_config.css  webviz_layout.css
porto/webviz_storage/: webviz_subsurface.containers._summary_stats-get_summary_data-57b2fc0ab2656dc7f980e65da40fb561.parquet  webviz_subsurface.containers._summary_stats-get_summary_stats-57b2fc0ab2656dc7f980e65da40fb561.parquet
test/: copy_data.py
test2/: requirements.txt  theme_settings.json
test3/: Dockerfile  README.md  webviz_app.py
tests/: conftest.py  requirements.txt  test_inplace_volumes.py  test_intersect_input.py  test_parameter_correlation.py  test_parameter_distribution.py  test_summary.py  test_summary_stats.py  test_summary_stats.yaml  test_time_series.py  webviz_testing.py
tests/data/: Iter0_FOPT.csv  colormap.txt  grid.roff  gridprop_png.txt  gruptree.csv  parameters.csv  prop.roff  realizations.csv  seismic.segy  seismic_png.txt  surface.gri  surface_png.txt  vfp.arrow  volumes.csv
tests/integration_tests/: test_aggregated_data_example.py  test_basic_example.py  test_ert_jobs.py  test_full_example.py  test_inplace_volumes.py  test_parameter_corr.py  test_parameter_filter.py  test_portable.py  test_raw_data_example.py  test_structural_uncertainty.py  test_surface_selector.py
webviz_subsurface/: __init__.py  delete.yaml  smry2arrow_batch.py
webviz_subsurface/_abbreviations/: __init__.py  number_formatting.py  reservoir_simulation.py  reservoir_simulation_vectors.json  volume_terminology.json  volume_terminology.py
webviz_subsurface/_components/: __init__.py  color_picker.py  parameter_filter.py
webviz_subsurface/_datainput/: _parse_model_file.py  eclipse_unit.py  fmu_input.py  from_timeseries_cumulatives.py  grid.py  history_match.py  huv_table.py  huv_xsection.py  image_processing.py  inplace_volumes.py  opm_init_io.py  parse_model_file.py  pvt_data.py  relative_permeability.py  seismic.py  surface.py  units.py  well.py  well_completions.py  xsection.py
webviz_subsurface/_figures/: __init__.py  barchart.py  px_figure.py  scatterplot.py  timeseries_figure.py
webviz_subsurface/_models/: __init__.py  caching_ensemble_set_model_factory.py  deckgl_layer_model.py  ensemble_model.py  ensemble_set_model.py  ensemble_time_series.py  ensemble_time_series_factory.py  ensemble_time_series_impl_arrow.py  ensemble_time_series_impl_inmem_dataframe.py  ensemble_time_series_impl_naive_parquet.py  ensemble_time_series_perf_testing.py  ensemble_time_series_set.py  gruptree_model.py  inplace_volumes_model.py  observation_model.py  parameter_model.py  stratigraphy_model.py  surface_leaflet_model.py  surface_set_model.py  table_model.py  table_model_factory.py  table_model_implementations.py  well_attributes_model.py  well_set_model.py
webviz_subsurface/_private_containers/: tornado_plot.py
webviz_subsurface/_private_plugins/: parameter_filter.py  polygon_map.py  surface_selector.py  tornado_plot.py
webviz_subsurface/_providers/: __init__.py  ensemble_summary_provider.py  ensemble_summary_provider_dataframe_utils.py  ensemble_summary_provider_experiments.py  ensemble_summary_provider_factory.py  ensemble_summary_provider_impl_LAZY_arrow.py  ensemble_summary_provider_impl_arrow.py  ensemble_summary_provider_impl_inmem_parquet.py  ensemble_summary_provider_impl_parquet.py  ensemble_summary_provider_perf_testing.py  ensemble_summary_provider_resampling.py  ensemble_summary_provider_set.py  ensemble_summary_provider_table_utils.py  ensemble_table_provider.py  ensemble_table_provider_factory.py  ensemble_table_provider_impl_arrow.py  ensemble_table_provider_impl_inmem_parquet.py
webviz_subsurface/_utils/: colors.py  dataframe_utils.py  design_matrix.py  ensemble_handling.py  ensemble_summary_provider_set.py  ensemble_summary_provider_set_factory.py  ensemble_table_provider_set.py  ensemble_table_provider_set_factory.py  fanchart_helpers.py  fanchart_plotting.py  (+13 more)
(+1262 files in other folders)
